fix: overflow fix in mobile

--- a/styles/index.css
+++ b/styles/index.css
@@ -367,24 +367,24 @@ footer a {
     right: -7px;
   }
   .skeleton {
-    left: -15%;
+    left: -14%;
     width: 100px;
     height: 94px;
   }
   .candy {
-    right: -16%;
+    right: -14%;
   }
   .bat {
-    left: -30px;
+    left: -28px;
   }
   .ghost {
-    left: -15%;
+    left: -14%;
   }
   .cat {
-    right: -16%;
+    right: -15%;
   }
   .witch {
-    right: -16%;
+    right: -15%;
   }
 
   .hand,
